# smart_seva_backend

./: .gitignore  .renderignore  DEPLOY_RENDER.md  Makefile  README.md  pyproject.toml  render.yaml
docs/: LLM_CONFIGURATION.md  QUICK_START.md  README.md
old_processors/: __init__.py  error_level_analysis.py  image_Old_processor.py  metadata_analysis.py  pattern_analysis.py  verification_processor.py
src/api/: main.py  models.py  routes.py
src/config/: __init__.py  logger_config.py  settings.py
src/services/: __init__.py  states.py  workflow.py
src/services/nodes/: __init__.py  ai_summary_node.py  image_ocr_node.py  input_validate_node.py
src/services/processors/: __init__.py  ai_summary_processor.py  image_processor.py
src/utils/: ai_validation_summary.py  llm_config.py
test_scripts/: pad_test.py  test_dual_lang_ocr.py  test_google_vision_ocr.py
